--- a/web-crawler/pom.xml
+++ b/web-crawler/pom.xml
@@ -15,19 +15,14 @@
 	<modules>
 		<module>web-crawler-boundary</module>
 		<module>web-crawler-model</module>
-		<module>web-crawler-processor</module>
 		<module>web-crawler-infrastructure</module>
 		<module>web-crawler-deployable</module>
 		<module>web-crawler-persistence</module>
+		<module>web-crawler-core</module>
 	</modules>
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>com.marfeel.web.crawler</groupId>
-				<artifactId>web-crawler-model</artifactId>
-				<version>${project.version}</version>
-			</dependency>
 			<dependency>
 				<groupId>com.marfeel.web.crawler</groupId>
 				<artifactId>web-crawler-boundary</artifactId>
@@ -40,7 +35,12 @@
 			</dependency>
 			<dependency>
 				<groupId>com.marfeel.web.crawler</groupId>
-				<artifactId>web-crawler-persistence</artifactId>
+				<artifactId>web-crawler-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.marfeel.web.crawler</groupId>
+				<artifactId>web-crawler-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -50,7 +50,7 @@
 			</dependency>
 			<dependency>
 				<groupId>com.marfeel.web.crawler</groupId>
-				<artifactId>web-crawler-processor</artifactId>
+				<artifactId>web-crawler-deployable</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
