--- a/web-crawler/web-crawler-core/pom.xml
+++ b/web-crawler/web-crawler-core/pom.xml
@@ -6,11 +6,19 @@
 		<artifactId>web-crawler</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>web-crawler-persistence</artifactId>
+	<artifactId>web-crawler-core</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.marfeel.web.crawler</groupId>
+			<artifactId>web-crawler-infrastructure</artifactId>
 		</dependency>
 	</dependencies>
 </project>
